--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Hijabs With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://st2.depositphotos.com/29490188/48092/i/450/depositphotos_480921618-stock-photo-happy-young-arabian-woman-in.jpg alt="Hijab Model" class="w-70 h-100">
+                <img src="https://cdn.orderonline.id/uploads/images_3955641752341428824.png alt="Hijab Model" class="w-70 h-100">
             </div>
         </div>
     </div>
