--- a/index.html
+++ b/index.html
@@ -207,47 +207,21 @@
         </button>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-amber-900 text-white py-8">
+<!-- Footer -->
+    <footer class="bg-amber-600 text-white py-1 px-4">
+    <footer class="premium-bg text-white py-8">
         <div class="container mx-auto px-4">
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-                <div>
-                    <h4 class="font-bold text-lg mb-4">Faradila Hijab</h4>
-                    <p class="text-amber-100 text-sm">Premium quality hijabs for modern Muslim women.</p>
-                    <div class="flex space-x-4 mt-4">
-                        <a href="#" class="text-amber-100 hover:text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-amber-100 hover:text-white"><i class="fab fa-facebook"></i></a>
-                    </div>
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-4 md:mb-0 text-center">
+                    <h3 class="text-xl font-bold">
+                        FARADILA HIJAB COLLECTION
+                    </h3>
+                    <p class="text-white-200 mt-2">Hijab Premium Untuk Muslimah Modern</p>
                 </div>
-            </div>
-            <div class="border-t border-amber-800 mt-8 pt-6 text-sm text-amber-200 text-center">
-                <p>© 2021 Faradilashop. All rights reserved.</p>
+                <p class="text-center text-white-200 text-sm">© 2025 Faradila Hijab. All rights reserved.</p>
             </div>
         </div>
     </footer>
-
-    <!-- Bottom Navigation -->
-    <div class="fixed bottom-0 left-0 right-0 bg-white shadow-lg md:hidden">
-        <div class="flex justify-around items-center py-3">
-            <a href="#" class="flex flex-col items-center text-amber-700">
-                <i class="fas fa-home text-lg"></i>
-                <span class="text-xs mt-1">Home</span>
-            </a>
-            <a href="#" class="flex flex-col items-center text-gray-500">
-                <i class="fas fa-search text-lg"></i>
-                <span class="text-xs mt-1">Search</span>
-            </a>
-            <a href="#" class="flex flex-col items-center text-gray-500 relative">
-                <i class="fas fa-shopping-cart text-lg"></i>
-                <span class="absolute -top-1 -right-2 bg-amber-600 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">3</span>
-                <span class="text-xs mt-1">Cart</span>
-            </a>
-            <a href="#" class="flex flex-col items-center text-gray-500">
-                <i class="fas fa-user text-lg"></i>
-                <span class="text-xs mt-1">Account</span>
-            </a>
-        </div>
-    </div>
 
     <script>
         // Simple script to toggle favorite button
