--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Hijabs With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://ibb.co/qL9zSy6m.jpg alt="Hijab Model" class="w-70 h-100">
+                <img src="file:///C:/Users/user/Downloads/Untitled-1.png alt="Hijab Model" class="w-70 h-100">
             </div>
         </div>
     </div>
