--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Hijabs With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://i.pinimg.com/736x/c0/21/aa/c021aacc015d72ff5810170fe1248a2a.jpg alt="Hijab Model" class="w-70 h-100">
+                <img src="https://st.depositphotos.com/59502630/55886/i/600/depositphotos_558865448-stock-photo-smiling-young-asian-muslim-woman.jpg alt="Hijab Model" class="w-70 h-100">
             </div>
         </div>
     </div>
