--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="text-amber-800 mb-4">Premium Quality Hijabs With Modern Designs</p>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://img.pikbest.com/origin/10/21/73/48cpIkbEsTIWg.jpg!sw800 alt="Hijab Model">
+                <img src="https://img.pikbest.com/origin/10/21/73/48cpIkbEsTIWg.jpg!sw800 class="w-70 h-100">
             </div>
         </div>
     </div>
