--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <!-- Load More Button -->
     <div class="container mx-auto px-4 py-6 text-center">
         <button class="bg-white border border-amber-600 text-amber-600 px-6 py-2 rounded-full font-medium hover:bg-amber-50 transition duration-300">
-            Load More Products
+            Trimakasih Sudah Berbelanja di Toko Kami
         </button>
     </div>
 
