--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 
     <!-- Load More Button -->
     <div class="container mx-auto px-4 py-6 text-center">
-        <button class="bg-white border border-amber-600 text-amber-600 px-6 py-2 rounded-full font-medium hover:bg-amber-50 transition duration-300">
+        <button class="bg-white border border-blue-600 text-blue-600 px-6 py-2 rounded-full font-medium hover:bg-amber-50 transition duration-300">
             Trimakasih Sudah belanja di Toko Kami
         </button>
     </div>
 
 <!-- Footer -->
-    <footer class="bg-amber-600 text-white py-1 px-4">
+    <footer class="bg-blue-600 text-white py-1 px-4">
     <footer class="premium-bg text-white py-8">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
@@ -302,34 +302,3 @@
 </html>
         </button>
     </div>
-
-<!-- Footer -->
-    <footer class="bg-amber-600 text-white py-1 px-4">
-    <footer class="premium-bg text-white py-8">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-4 md:mb-0 text-center">
-                    <h3 class="text-xl font-bold">
-                        FARADILA HIJAB COLLECTION
-                    </h3>
-                    <p class="text-white-200 mt-2">Hijab Premium Untuk Muslimah Modern</p>
-                </div>
-                <p class="text-center text-white-200 text-sm">© 2025 Faradila Hijab. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Simple script to toggle favorite button
-        document.querySelectorAll('.product-card button').forEach(button => {
-            button.addEventListener('click', function() {
-                if (this.innerHTML.includes('far fa-heart')) {
-                    this.innerHTML = '<i class="fas fa-heart text-amber-700"></i>';
-                } else {
-                    this.innerHTML = '<i class="far fa-heart"></i>';
-                }
-            });
-        });
-    </script>
-</body>
-</html>
