--- a/index.html
+++ b/index.html
@@ -257,6 +257,66 @@
                     </a>
                 </div>
             </div>
+            
+            <!-- Product 7 -->
+             <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img src="https://cdn.orderonline.id/uploads/images_2039591752424837278.png" alt="Hijab 2" class="w-full h-48 object-cover product-image">
+                    <div class="absolute top-2 right-2 bg-red-600 text-white text-xs px-2 py-1 rounded-full badge">Hot</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">PASHMINA SHAWL BUTTON</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-amber-400">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(928)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-blue-700 font-bold">Rp 137,800</span>
+                        <button class="text-red-700">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://vina.orderonline.id/pashmina-shawl-button" class="block w-full bg-blue-700 hover:bg-blue-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        Belanja Sekarang
+                    </a>
+                </div>
+            </div>
+
+            <!-- Product 8 -->
+             <div class="product-card bg-white rounded-lg shadow-sm overflow-hidden">
+                <div class="relative">
+                    <img src="https://cdn.orderonline.id/uploads/images_1910771752424901439.png" alt="Hijab 2" class="w-full h-48 object-cover product-image">
+                    <div class="absolute top-2 right-2 bg-orange-500 text-white text-xs px-2 py-1 rounded-full badge">New</div>
+                </div>
+                <div class="p-3">
+                    <h4 class="text-sm font-medium text-gray-800 mb-1 truncate">Pashmina Instan Oval Malay</h4>
+                    <div class="flex items-center mb-1">
+                        <div class="flex text-amber-400">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <span class="text-xs text-gray-500 ml-1">(191)</span>
+                    </div>
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-blue-700 font-bold">Rp 159,000</span>
+                        <button class="text-gray-400">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>
+                    <a href="https://vina.orderonline.id/pashmina-instan-oval-malay" class="block w-full bg-blue-700 hover:bg-blue-800 text-white text-center py-2 rounded-md text-sm font-medium buy-button">
+                        Belanja Sekarang
+                    </a>
+                </div>
+            </div>
                     </div>
                 </div>
             </div>
